# smoker

./: README.md
notes/: pi_setup.md
python_mvp/: initial_cal.xlsx  plot_cal.py  pyproject.toml
python_mvp/python_mvp/: main.py
